# federatedlearning-sgx

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/cmake/: AddGrpc.cmake  AddProtobuf.cmake
client/cmake/Modules/: FindGrpc.cmake
client/src/greeter/: greeter_client.cc
cmake/: AddGrpc.cmake  AddProtobuf.cmake  FindRequiredPackage.cmake
cmake/Modules/: FindGrpc.cmake
server/: environment
server/greeter/: Makefile
server/greeter/SampleEnclave/: Makefile
server/greeter/SampleEnclave/Enclave/: Enclave.cpp  Enclave.edl
server/route_guide/: Makefile  helper.cc  route_guide_server.cc
server/src/greeter/: Makefile  greeter_server.cc
server/src/greeter/SampleEnclave/: Makefile
server/src/greeter/SampleEnclave/App/: App.cpp
server/src/greeter/SampleEnclave/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
server/src/route_guide/: route_guide_client.cc
src/: greeter_server.cc  main.cc
src/greeter/: greeter_client.cc
src/route_guide/: route_guide_client.cc  route_guide_server.cc
